--- a/bookstore/Gemfile
+++ b/bookstore/Gemfile
@@ -8,6 +8,9 @@ gem 'rails', '4.1.1'
 gem "pg", :group => :production
 gem "sqlite3", :group => :development
 
+gem 'sinatra', '1.1.0'
+gem 'rails_12factor' , group: :production
+
 # Use SCSS for stylesheets
 gem 'sass-rails', '~> 4.0.3'
 # Use Uglifier as compressor for JavaScript assets
